bugfind fixes
git-svn-id: file:///home/svn/omero/branches/Beta4.2@7599 05709c45-44f0-0310-885b-81a1db45b4a6